--- a/src/scss/blocks/_time.scss
+++ b/src/scss/blocks/_time.scss
@@ -13,7 +13,7 @@
   }
 
   .time {
-    font-size: var(--step-5);
+    font-size: var(--step-4);
     font-weight: 700;
   }
 
@@ -32,7 +32,7 @@
   }
 
   .location-wrapper {
-    font-size: var(--step-1);
+    font-size: var(--step-0);
     font-weight: 700;
     letter-spacing: 2px;
   }
