--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -14,7 +14,7 @@ body {
   overflow: hidden;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../images/mobile/bg-image-daytime.jpg");
-  background-position: center center;
+  background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
   font-family: var(--ff-body);
@@ -49,9 +49,9 @@ body.js-night {
 }
 
 body > section {
-  block-size: 50vh;
-  padding-block-start: clamp(3rem, 15%, 6rem);
-  padding-block-end: clamp(3rem, 15%, 6rem);
+  // block-size: 50vh;
+  padding-block-start: clamp(2rem, 10%, 4rem);
+  padding-block-end: clamp(2rem, 10%, 4rem);
   transition: transform 800ms cubic-bezier((0.49, 0, 0.77, 1.25));
 }
 
